netpol-dashboard/test-manifests/busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: busybox
spec:
  replicas: 6
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ['sh', '-c', 'while true; do wget ingress-nginx-defaultbackend.ingress-nginx.svc.cluster.local; sleep 1; done;']
---
