netpol-dashboard/test-manifests/busybox2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox2
  name: busybox2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: busybox2
  template:
    metadata:
      labels:
        app: busybox2
    spec:
      containers:
      - image: busybox
        name: busybox2
        command: ['sh', '-c', 'while true; do wget ingress-nginx-defaultbackend.ingress-nginx.svc.cluster.local; sleep 1; done;']
---
