netpol-dashboard/test-manifests/busybox3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox3
  name: busybox3
spec:
  replicas: 4
  selector:
    matchLabels:
      app: busybox3
  template:
    metadata:
      labels:
        app: busybox3
    spec:
      containers:
      - image: busybox
        name: busybox3
        command: ['sh', '-c', 'while true; do wget ingress-nginx-defaultbackend.ingress-nginx.svc.cluster.local; sleep 1; done;']
---
