netpol-dashboard/test-manifests/networkpolicy-deny-busybox2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-busybox2
  namespace: default
spec:
  podSelector:
    matchLabels:
        app: busybox2
  policyTypes:
  - Egress
